[package]
name = "flow-orchestrator-pattern"
version = "0.1.0"
authors = ["Guillermo Céspedes Tabárez <dev.dertin@gmail.com>"]
edition = "2021"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ahash = "0.8.3"